some minor change

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	URL: https://freehtml5.co
 -->
 <html lang="en">
+
 <head>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
@@ -14,47 +15,50 @@
 	<link rel="stylesheet" href="css/slick.css">
 	<title>Aditya Dahal</title>
 </head>
+
 <body>
 
 	<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    	<!-- Navigation -->
-	<nav class="site-navigation">
-		<div class="site-navigation-inner site-container">
-			<!-- <img src="./images/logo1.png" alt="site logo"> -->
-			<h4>A.D.</h4>
-			<div class="main-navigation">
-				<ul class="main-navigation__ul">
-					<li><a href="#">Homepage</a></li>
-					<!-- <li><a href="#">Page 1</a></li>
+	<html lang="en">
+
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Document</title>
+	</head>
+
+	<body>
+		<!-- Navigation -->
+		<nav class="site-navigation">
+			<div class="site-navigation-inner site-container">
+				<!-- <img src="./images/logo1.png" alt="site logo"> -->
+				<h4>A.D.</h4>
+				<div class="main-navigation">
+					<ul class="main-navigation__ul">
+						<li><a href="#">Homepage</a></li>
+						<!-- <li><a href="#">Page 1</a></li>
 					<li><a href="#">Page 2</a></li>
 					<li><a href="#">Page 3</a></li>
 					<li><a href="#">Page 4</a></li> -->
-				</ul>
+					</ul>
+				</div>
+				<div id="myBtn" class="burger-container" onclick="myFunction(this)">
+					<div class="bar1"></div>
+					<div class="bar2"></div>
+					<div class="bar3"></div>
+				</div>
+				<script>
+					function myFunction(x) {
+						x.classList.toggle("change");
+					}
+				</script>
 			</div>
-			<div id="myBtn" class="burger-container" onclick="myFunction(this)">
-				<div class="bar1"></div>
-				<div class="bar2"></div>
-				<div class="bar3"></div>
-			</div>
-			<script>
-				function myFunction(x) {
-					x.classList.toggle("change");
-				}
-			</script>
-		</div>
-	</nav>
-	<!-- Navigation end -->
+		</nav>
+		<!-- Navigation end -->
 
-	<!-- Top banner -->
-	<!-- <section class="fh5co-top-banner">
+		<!-- Top banner -->
+		<!-- <section class="fh5co-top-banner">
 		<div class="top-banner__inner site-container">
 			<div class="top-banner__image">
 				<img src="./images/hero.png" alt="author image">
@@ -70,10 +74,11 @@
 				</div>
 			</div>
 		</div> -->
-	</section>
-	<!-- Top banner end -->
-</body>
-</html>
+		</section>
+		<!-- Top banner end -->
+	</body>
+
+	</html>
 
 
 
@@ -89,14 +94,20 @@
 						<span>A</span>
 						<h2 class="universal-h2">ditya Dahal</h2>
 					</div>
-					<p>A Learner</p>
+					<p>A Learner, developer</p>
 				</div>
 			</article>
 			<div class="about-me__text">
 				<div class="about-me-slider">
 					<div class="about-me-single-slide">
 						<h2 class="universal-h2 universal-h2-bckg">Who am I ?</h2>
-						<p><span>(</span>Born and raised in Jhapa, I used to be a kid who was into football and games. As a teen who prefered indoors and video games, growing up, my interest in computing and programming emerged from the same. Currently, I am a student of Bachelors in Computing in Islington College of London Metrolopolitan University. My involvement in several personal and professional projects of web development in the past and present has honed my programming skills in Html, CSS and PHP. <span>)</span>  </p>
+						<p><span>(</span>Born and raised in Jhapa. Bhadrapur, I used to be a kid who was into football
+							and games.
+							As a teen who prefered indoors and video games, growing up, my interest in computing and
+							programming emerged from the same. Currently, I am a student of Bachelors in Computing in
+							Islington College of London Metrolopolitan University. My involvement in several personal
+							and professional projects of web development in the past and present has honed my
+							programming skills in Html, CSS and PHP. <span>)</span> </p>
 					</div>
 				</div>
 			</div>
@@ -105,7 +116,7 @@
 	</section>
 	<!-- About me end -->
 
-	
+
 	<!-- <section class="fh5co-books">
 		<div class="site-container">
 			<h2 class="universal-h2 universal-h2-bckg">New Books And CD</h2>
@@ -177,7 +188,7 @@
 	<!-- Books and CD end -->
 
 	<!-- Counter -->
- 
+
 	<!-- Counter -->
 
 	<!-- Blog -->
@@ -247,7 +258,7 @@
 	<section class="fh5co-social">
 		<div class="site-container">
 			<div class="social">
-				
+
 				<ul>
 					<h5>Mentors</h5>
 					<p></p>
@@ -332,4 +343,5 @@
 	<script src="js/main.js"></script>
 
 </body>
+
 </html>
